refactor(docker): move Dockerfile to docs dir
since this Dockerfile is only used for running a local
docs site, and the repo is a template repo - the final
project may want to define its own Dockerfile

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -2,7 +2,7 @@
 {
     "name": "mkdocs-template",
     "build": {
-        "dockerfile": "Dockerfile",
+        "dockerfile": "docs/Dockerfile",
         "context": ".",
     },
 
