feat(pre-commit): install and init in devcontainer
since pre-commit isn't a dependency of the docs site,
do not add to docs/requirements.txt but rather install via
.devcontainer.json postCreateCommand

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -6,7 +6,7 @@
         "context": ".",
     },
 
-    "settings": { 
+    "settings": {
         "python.pythonPath": "/usr/local/bin/python",
         "python.languageServer": "Pylance",
         "python.linting.enabled": true,
@@ -28,6 +28,8 @@
     ],
 
     "forwardPorts": [8000],
+
+    "postCreateCommand": "pip install pre-commit && pre-commit install --install-hooks",
 
     "postAttachCommand": "mkdocs serve --dev-addr=0.0.0.0:8000",
 }
