--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,11 @@ theme:
         icon: material/toggle-switch
         name: Switch to light mode
 
+extra:
+  analytics:
+    provider: google
+    property: G-SZB618VNBZ
+
 plugins:
   - search
   - awesome-pages
