fix: update default edit branch

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: "cal-itp/mkdocs-template"
 site_url: https://docs.calitp.org/mkdocs-template
 repo_url: https://github.com/cal-itp/mkdocs-template
-edit_uri: edit/dev/docs
+edit_uri: edit/main/docs
 
 theme:
   name: material
