--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -7,3 +7,6 @@ MD007:
 
 # Remove line length limit - no one wants to hard wrap all their paragraphs
 MD013: false
+
+# Allow inline HTML
+MD033: false
